--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
 rabbit.interval=2
+rabbit.url=jdbc:postgresql://127.0.0.1:5432/rabbit
+rabbit.driver=org.postgresql.Driver
+rabbit.username=postgres
+rabbit.password=password
